argocd/resources/argocd-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: argocd
  name: argocd-ingress
  labels:
    app.kubernetes.io/name: argocd-ingress
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/component: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - argocd.doliinyk-app.pp.ua
      secretName: argocd
  rules:
    - host: argocd.doliinyk-app.pp.ua
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: http
